{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 128,
  "lineage": "d92ab171-33ee-8a83-2a43-8e5d336c0932",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "keethu-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c001cc7afcb83eed",
            "arn": "arn:aws:ec2:us-east-2:888577023923:elastic-ip/eipalloc-0c001cc7afcb83eed",
            "domain": "vpc",
            "id": "eipalloc-0c001cc7afcb83eed",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-141-77-2.us-east-2.compute.amazonaws.com",
            "public_ip": "3.141.77.2",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "name",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0942ecd5d85baa812",
            "arn": "arn:aws:ec2:us-east-2:888577023923:instance/i-006949b32d8404b55",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-006949b32d8404b55",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "keethu",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09ee52652f6d9e0ce",
            "private_dns": "ip-10-0-0-167.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.167",
            "public_ip": "3.144.228.90",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0544ddf0548272720",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dd9ff7d4e51a92d9",
            "tags": {
              "Name": "project-k-ec2"
            },
            "tags_all": {
              "Name": "project-k-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02e819da489591b9b"
            ]
          },
          "dependencies": [
            "aws_security_group.keethu-sg",
            "aws_subnet.keethu-sb",
            "aws_vpc.keethu-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "name-prvt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0942ecd5d85baa812",
            "arn": "arn:aws:ec2:us-east-2:888577023923:instance/i-086d66cecaf8bfac2",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-086d66cecaf8bfac2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "keethu",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06bf86a21eaedc500",
            "private_dns": "ip-10-0-1-235.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.235",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0eff01c271339475a",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0304a178275e1a41f",
            "tags": {
              "Name": "project-k-ec2-prvt"
            },
            "tags_all": {
              "Name": "project-k-ec2-prvt"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02e819da489591b9b"
            ]
          },
          "dependencies": [
            "aws_security_group.keethu-sg",
            "aws_subnet.keethu-sb-prvt",
            "aws_vpc.keethu-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "keethu-ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:888577023923:internet-gateway/igw-05d52c7b61c3a1799",
            "id": "igw-05d52c7b61c3a1799",
            "owner_id": "888577023923",
            "tags": {
              "Name": "ig"
            },
            "tags_all": {
              "Name": "ig"
            },
            "vpc_id": "vpc-018a4706a05a11385"
          },
          "dependencies": [
            "aws_vpc.keethu-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "keethu-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c001cc7afcb83eed",
            "association_id": "eipassoc-067a4cb835386c941",
            "connectivity_type": "public",
            "id": "nat-06951dc35a38b0211",
            "network_interface_id": "eni-02e222914f8b771d2",
            "private_ip": "10.0.0.244",
            "public_ip": "3.141.77.2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0dd9ff7d4e51a92d9",
            "tags": {
              "Name": "keethu-nat"
            },
            "tags_all": {
              "Name": "keethu-nat"
            }
          },
          "dependencies": [
            "aws_eip.keethu-eip",
            "aws_subnet.keethu-sb",
            "aws_vpc.keethu-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "keethu-private-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:888577023923:route-table/rtb-0f8698bdf5ad51941",
            "id": "rtb-0f8698bdf5ad51941",
            "owner_id": "888577023923",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06951dc35a38b0211",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "project-k-private-rt"
            },
            "tags_all": {
              "Name": "project-k-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-018a4706a05a11385"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.keethu-eip",
            "aws_nat_gateway.keethu-nat",
            "aws_subnet.keethu-sb",
            "aws_vpc.keethu-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "keethu-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:888577023923:route-table/rtb-05101b42cf609e3e1",
            "id": "rtb-05101b42cf609e3e1",
            "owner_id": "888577023923",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05d52c7b61c3a1799",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "project-k-rt"
            },
            "tags_all": {
              "Name": "project-k-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-018a4706a05a11385"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.keethu-ig",
            "aws_vpc.keethu-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "keethu",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0daab37ff6227de07",
            "route_table_id": "rtb-05101b42cf609e3e1",
            "subnet_id": "subnet-0dd9ff7d4e51a92d9"
          },
          "dependencies": [
            "aws_internet_gateway.keethu-ig",
            "aws_route_table.keethu-route",
            "aws_subnet.keethu-sb",
            "aws_vpc.keethu-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnet-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0afe6644b000d3334",
            "route_table_id": "rtb-0f8698bdf5ad51941",
            "subnet_id": "subnet-0304a178275e1a41f"
          },
          "dependencies": [
            "aws_eip.keethu-eip",
            "aws_nat_gateway.keethu-nat",
            "aws_route_table.keethu-private-route",
            "aws_subnet.keethu-sb",
            "aws_subnet.keethu-sb-prvt",
            "aws_vpc.keethu-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "keethu-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:888577023923:security-group/sg-02e819da489591b9b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02e819da489591b9b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "inbound traffic",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow all traffic",
            "name_prefix": "",
            "owner_id": "888577023923",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-project-k"
            },
            "tags_all": {
              "Name": "sg-project-k"
            },
            "timeouts": null,
            "vpc_id": "vpc-018a4706a05a11385"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.keethu-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "keethu-sb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:888577023923:subnet/subnet-0dd9ff7d4e51a92d9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dd9ff7d4e51a92d9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "888577023923",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project-k-subnet"
            },
            "tags_all": {
              "Name": "project-k-subnet"
            },
            "vpc_id": "vpc-018a4706a05a11385"
          },
          "dependencies": [
            "aws_vpc.keethu-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "keethu-sb-prvt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:888577023923:subnet/subnet-0304a178275e1a41f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0304a178275e1a41f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "888577023923",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project-k- prvt-subnet"
            },
            "tags_all": {
              "Name": "project-k- prvt-subnet"
            },
            "vpc_id": "vpc-018a4706a05a11385"
          },
          "dependencies": [
            "aws_vpc.keethu-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "keethu-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:888577023923:vpc/vpc-018a4706a05a11385",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0964cf7a1a6950ceb",
            "default_route_table_id": "rtb-0833e182e2eaf8e19",
            "default_security_group_id": "sg-0846187443837653a",
            "dhcp_options_id": "dopt-0102241461e7987c6",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-018a4706a05a11385",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0833e182e2eaf8e19",
            "owner_id": "888577023923",
            "tags": {
              "Name": "project-k-vpc"
            },
            "tags_all": {
              "Name": "project-k-vpc"
            }
          }
        }
      ]
    }
  ]
}